objects/Interaction_Assignment__c.object
<CustomObject>
    <label>Interaction Assignment</label>
    <nameField>
        <label>SFDC Integration  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SAI__c</fullName>
        <label>SAI</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interaction_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Interaction</label>
        <referenceTo>SFDC_Interaction__c</referenceTo>
        <relationshipLabel>Interaction Assignments</relationshipLabel>
        <relationshipName>Interaction_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>